[metadata]
name = instagram-follow-check
version = 0.0.1
author = iwantmyhatback
description = Small script to check for instagram accounts which the user follows but do not follow said user back
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/iwantmyhatback/instagram-following-vs-followers
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = follower-following-compare
packages = find:
python_requires = >=3.6

[options.packages.find]
where = follower-following-compare